[project]
name = "openpeon-djkhaled"
version = "0.1.0"
description = "DJ Khaled voice pack tooling"
authors = [
    {name = "Mevin Mathew",email = "mevin.mathew@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp (>=2026.3.17,<2027.0.0)",
    "openai-whisper (>=20250625,<20250626)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
